finished extra credit

--- a/databases/hw/extra_credit.ipynb
+++ b/databases/hw/extra_credit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,21 +17,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "6)\tTry the different strategies.\n",
-    "a)\tRemove all individuals if they are missing any features\n",
-    "b)\tReplace the missing value with the “median” value\n",
-    "7)\tFor each strategy see how well Random Forest works.\n",
-    "8)\tRepeat steps 4-6 with 25% missing values.\n",
-    "9)\tWhat are your conclusions?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +124,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +144,7 @@
        "<AxesSubplot:xlabel='age', ylabel='charges'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -181,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +177,7 @@
        "<AxesSubplot:xlabel='bmi', ylabel='charges'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -213,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +209,7 @@
        "<AxesSubplot:xlabel='children', ylabel='charges'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -245,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +241,7 @@
        "<AxesSubplot:xlabel='sex', ylabel='charges'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -277,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +273,7 @@
        "<AxesSubplot:xlabel='smoker', ylabel='charges'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -309,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +305,7 @@
        "<AxesSubplot:xlabel='region', ylabel='charges'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -341,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +399,7 @@
        "charges   0.299008  0.198341  0.067998  1.000000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +421,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -458,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +586,7 @@
        "4                 0  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +618,7 @@
        "23092953.70762211"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,238 +634,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>children</th>\n",
-       "      <th>sex_female</th>\n",
-       "      <th>sex_male</th>\n",
-       "      <th>smoker_no</th>\n",
-       "      <th>smoker_yes</th>\n",
-       "      <th>region_northeast</th>\n",
-       "      <th>region_northwest</th>\n",
-       "      <th>region_southeast</th>\n",
-       "      <th>region_southwest</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1313</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>34.700</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>33.0</td>\n",
-       "      <td>22.705</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>605</th>\n",
-       "      <td>51.0</td>\n",
-       "      <td>34.100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>425</th>\n",
-       "      <td>45.0</td>\n",
-       "      <td>24.310</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>403</th>\n",
-       "      <td>49.0</td>\n",
-       "      <td>32.300</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>639</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>31.0</td>\n",
-       "      <td>28.500</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>934</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>37.180</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>815</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>31.460</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>61.0</td>\n",
-       "      <td>29.920</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       age     bmi  children  sex_female  sex_male  smoker_no  smoker_yes  \\\n",
-       "1313  19.0  34.700       2.0         1.0       0.0        0.0         1.0   \n",
-       "3     33.0  22.705       0.0         0.0       1.0        1.0         0.0   \n",
-       "605   51.0  34.100       0.0         1.0       0.0        1.0         0.0   \n",
-       "425   45.0  24.310       5.0         0.0       1.0        1.0         0.0   \n",
-       "403   49.0  32.300       3.0         0.0       1.0        1.0         0.0   \n",
-       "...    ...     ...       ...         ...       ...        ...         ...   \n",
-       "639    NaN     NaN       NaN         NaN       NaN        NaN         NaN   \n",
-       "71    31.0  28.500       5.0         0.0       1.0        1.0         0.0   \n",
-       "934   32.0  37.180       2.0         0.0       1.0        1.0         0.0   \n",
-       "815   20.0  31.460       0.0         1.0       0.0        1.0         0.0   \n",
-       "103   61.0  29.920       3.0         1.0       0.0        0.0         1.0   \n",
-       "\n",
-       "      region_northeast  region_northwest  region_southeast  region_southwest  \n",
-       "1313               0.0               0.0               0.0               1.0  \n",
-       "3                  0.0               1.0               0.0               0.0  \n",
-       "605                0.0               0.0               1.0               0.0  \n",
-       "425                0.0               0.0               1.0               0.0  \n",
-       "403                0.0               1.0               0.0               0.0  \n",
-       "...                ...               ...               ...               ...  \n",
-       "639                NaN               NaN               NaN               NaN  \n",
-       "71                 1.0               0.0               0.0               0.0  \n",
-       "934                0.0               0.0               1.0               0.0  \n",
-       "815                0.0               0.0               1.0               0.0  \n",
-       "103                0.0               0.0               1.0               0.0  \n",
-       "\n",
-       "[1000 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5\n",
     "rows = random.sample(range(1000), 100)\n",
@@ -888,99 +646,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>children</th>\n",
-       "      <th>sex_male</th>\n",
-       "      <th>smoker_no</th>\n",
-       "      <th>smoker_yes</th>\n",
-       "      <th>region_northeast</th>\n",
-       "      <th>region_northwest</th>\n",
-       "      <th>region_southeast</th>\n",
-       "      <th>region_southwest</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>605</th>\n",
-       "      <td>51</td>\n",
-       "      <td>34.1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     age   bmi  children  sex_male  smoker_no  smoker_yes  region_northeast  \\\n",
-       "605   51  34.1         0         0          1           0                 0   \n",
-       "\n",
-       "     region_northwest  region_southeast  region_southwest  \n",
-       "605                 0                 1                 0  "
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(11,)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 6a\n",
+    "data_dropna = x_train.join(y_train).dropna()\n",
+    "x_train_dropna = data_dropna.drop('charges', axis = 1)\n",
+    "y_train_dropna = data_dropna['charges']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6b\n",
+    "x_train_fillna = x_train.fillna(x_train.median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24180309.811160386"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7a \n",
+    "model = RandomForestRegressor(random_state= 777)\n",
+    "model = model.fit(x_train_dropna,y_train_dropna)\n",
+    "y_pred = model.predict(x_test)\n",
+    "mse = mean_squared_error(y_pred= y_pred, y_true= y_test)\n",
+    "mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24604501.87449883"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7b\n",
+    "model = RandomForestRegressor(random_state= 777)\n",
+    "model = model.fit(x_train_fillna,y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "mse = mean_squared_error(y_pred= y_pred, y_true= y_test)\n",
+    "mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24802894.26022859\n",
+      "24888796.331780855\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8\n",
+    "rows = random.sample(range(1000), 250)\n",
+    "for row in rows:\n",
+    "    x_train.iloc[row:row + 1,[0,1,2,3,4,5,6,7,8,9,10]] = None\n",
+    "    \n",
+    "data_dropna = x_train.join(y_train).dropna()\n",
+    "x_train_dropna = data_dropna.drop('charges', axis = 1)\n",
+    "y_train_dropna = data_dropna['charges']\n",
+    "\n",
+    "x_train_fillna = x_train.fillna(x_train.median())\n",
+    "\n",
+    "model = RandomForestRegressor(random_state= 777)\n",
+    "model = model.fit(x_train_dropna,y_train_dropna)\n",
+    "y_pred = model.predict(x_test)\n",
+    "mse = mean_squared_error(y_pred= y_pred, y_true= y_test)\n",
+    "print(mse)\n",
+    "\n",
+    "model = RandomForestRegressor(random_state= 777)\n",
+    "model = model.fit(x_train_fillna,y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "mse = mean_squared_error(y_pred= y_pred, y_true= y_test)\n",
+    "print(mse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9 \n",
+    "The largest take away is that filling the missing data with the median value has a larger error when compared to dropping the rows with the missing data. Additionally, it can be seen that missing more data leads to a higher error. Within the data specifically, it is also seen that age has the highest correlation with charges while children have the lowest. "
+   ]
   }
  ],
  "metadata": {
