--- a/databases/hw/db_final_ghosh.ipynb
+++ b/databases/hw/db_final_ghosh.ipynb
@@ -150,10 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#1\n",
-    "Outcome is categorical because there are only two possibilities.\n",
-    "The BMI and DiabetesPedigreeFunction are numerical because they have decimals and the rest (Glucose, BloodPressure, SkinThickness, Insulin, Age) are numerical because the order of the values is important.\n",
-    "Pregnancies can be considered categorical if we assume the fixed number of unique pregnancies in the data set are the only values possible. "
+    "### **1 Outcome is categorical because there are only two possibilities. The BMI and DiabetesPedigreeFunction are numerical because they have decimals and the rest (Glucose, BloodPressure, SkinThickness, Insulin, Age) are numerical because the order of the values is important. Pregnancies can be considered categorical if we assume the fixed number of unique pregnancies in the data set are the only values possible.** "
    ]
   },
   {
@@ -454,8 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#3\n",
-    "With the exception of pregnancies and outcome, all the other 0's must be representing NA's/missing value"
+    "### ***3. With the exception of pregnancies and outcome, all the other 0's must be representing NA's/missing value. There are two options to fix this: 1. replace 0 with median  2. drop rows with 0 in any value***"
    ]
   },
   {
@@ -481,6 +477,13 @@
     "    else:\n",
     "        data_drop[col] = data_drop[col].replace(0,np.NaN)\n",
     "data_drop = data_drop.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ***4. I chose 10xfold Cross Validation for my testing purposes. I am going try RandomForest, SVM and KNN on both the data sets (one with median replacement, one with dropped na's). To regularize against overfitting I will be using GridSearchCV also with 10xfold Cross Validation to search for the best hyperparameters for each model. To determine which model is best, I will be comparing the cross validated AUC scores of each model.***"
    ]
   },
   {
@@ -664,6 +667,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ***In an attempt to see if combining the classifiers improved performance, I used VotingClassifier to combine the highest performing classifiers from the above models and got an auc of 0.833, which was lower than my best individual model.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -686,7 +696,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### ***5. From the above it can be seen that the RandomForestClassifier with max_depth=5, max_features=4, and n_estimators=50 when used on the data set in which rows with NA were dropped performed the best, with an AUC score of 0.8686. The code for my best performing model can be seen in the cell below:*** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5\n",
+    "grid_rf_drop = GridSearchCV(rf_model, param_rf, cv = 10, scoring= 'roc_auc', n_jobs= -1)\n",
+    "grid_rf_drop = grid_rf_drop.fit(data_drop.drop('Outcome', axis = 1), data_drop['Outcome'])\n",
+    "best_model = grid_rf_drop.best_estimator_ # please use this to test"
+   ]
   }
  ],
  "metadata": {
